--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -21,7 +22,10 @@
     <main>
 
         <div class="card">
-            <div > <img class="imagen" src="img/bg-batman.jpg" alt=""></div>
+            <div class="img-fondo">
+                <p><i class="fas fa-heart icon"></i></p> 
+                <img class="imagen" src="img/bg-batman.jpg" alt="">
+            </div>
             <div class="textoCard">
                 <img class="foto" src="img/batman.jpg" alt="foto_batman">
                 <h2 class="nombre">BATMAN</h2>
@@ -32,7 +36,10 @@
             </div>
         </div>
         <div class="card">
-            <div ><img class="imagen" src="img/bg-wonderw.jpg" alt=""></div>
+            <div class="img-fondo">
+                <p><i class="fas fa-heart icon"></i></p>
+                <img class="imagen" src="img/bg-wonderw.jpg" alt="">
+            </div>
             <div class="textoCard">
                 <img class= "foto" src="img/wonderw.jpg" alt="foto_mujerMaravilla">
                 <h2 class="nombre">MUJER MARAVILLA</h2>
@@ -42,7 +49,10 @@
             </div>
         </div>
         <div class="card">
-            <div><img class="imagen img-superman" src="img/bg-superman.jpg" alt=""></div>
+            <div class="img-fondo">
+                <p><i class="fas fa-heart icon"></i></p>
+                <img class="imagen img-superman" src="img/bg-superman.jpg" alt="">
+            </div>
             <div class="textoCard">
                 <img class= "foto" src="img/superman.jpg" alt="foto_superman">
                 <h2 class="nombre">SUPERMAN</h2>
@@ -52,6 +62,8 @@
                 <a class="info" href="#">Ver más</a>
             </div>
         </div>
+
+        <i class="fas fa-plus-circle more"></i>
 
     </main>
 
