segunda version con registro y login

--- a/index.html
+++ b/index.html
@@ -5,18 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Superheroes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div id="descuento">
-        <p>Descuentos 20%</p>
+        <p>20% de descuento en todos los productos!</p>
     </div>
 
     <header>
-        <h1>Card Super Heroes</h1>
+        
+        <div class="tienda">
+        <img class="logo contHeader" src="img/logo_tienda.svg" alt="">
+        <h1 class="contHeader">Nombre Tienda</h1>
+        </div>
+        
+        <nav>
+            <ul class="navUl">
+                <li class="navLi"><a href="#">Contacto</a> </li>
+                <li class="navLi"><a href="/registro.html">Registrarme</a> </li>
+                <li class="navLi"><a href="/login.html">Ingresar</a> </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
@@ -27,7 +39,7 @@
                 <img class="imagen" src="img/bg-batman.jpg" alt="">
             </div>
             <div class="textoCard">
-                <img class="foto" src="img/batman.jpg" alt="foto_batman">
+                <img class="foto" src="img/batman2.jpg" alt="foto_batman">
                 <h2 class="nombre">BATMAN</h2>
                 <p class="origen">Bruce Wayne es el único personaje que se identifica como Batman y aparece
                     en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto
@@ -44,21 +56,22 @@
                 <img class= "foto" src="img/wonderw.jpg" alt="foto_mujerMaravilla">
                 <h2 class="nombre">MUJER MARAVILLA</h2>
                 <p class="origen">El personaje apareció como tal publicado por primera vez en la revista de
-                    historietas All Star Comics (de diciembre de 1941)1​ y con su alter-ego en el Sensation Comics</p>
+                    historietas All Star Comics (de diciembre de 1941)1​ y con su alter-ego en el Sensation Comics.
+                    La mujer Maravilla</p>
                 <a class="info" href="#">Ver más</a>
             </div>
         </div>
         <div class="card">
             <div class="img-fondo">
                 <p><i class="fas fa-heart icon"></i></p>
-                <img class="imagen img-superman" src="img/bg-superman.jpg" alt="">
+                <img class="imagen img-superman" src="img/bg-batman.jpg" alt="">
             </div>
             <div class="textoCard">
-                <img class= "foto" src="img/superman.jpg" alt="foto_superman">
+                <img class= "foto" src="img/batman2.jpg" alt="foto_batman">
                 <h2 class="nombre">SUPERMAN</h2>
-                <p class="origen">Superman nace en un mundo extraño a una especie tecnológicamente
-                    avanzada que se parece a los humanos. Poco después de nacer, su planeta se destruye en un cataclismo
-                    natural</p>
+                <p class="origen">Bruce Wayne es el único personaje que se identifica como Batman y aparece
+                    en Batman, Detective Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto
+                    de Nightwing</p>
                 <a class="info" href="#">Ver más</a>
             </div>
         </div>
